[gd_scene load_steps=2 format=3 uid="uid://bt6sh5hh7awu8"]

[ext_resource type="Script" path="res://Scenes/Components/DamageRange/damage_range_component.gd" id="1_q0gqk"]

[node name="DamageRangeComponent" type="Area2D"]
collision_layer = 0
script = ExtResource("1_q0gqk")

[node name="SpellCooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="SpellCooldown" to="." method="_on_spell_cooldown_timeout"]
